Fix layout issues - Shorter label text for small screens - Fix padding issue where text input for sliders would wrap and run into help link - Fix wordpress overrides now being generally applied - Switch to grid layout for floating results bar - Add several wordpress overrides

--- a/src/styles/_living_situation.scss
+++ b/src/styles/_living_situation.scss
@@ -56,7 +56,7 @@
       .living_situation_icon {
         max-width: 100px;
       }
-      
+
       .single_icon { 
         padding: 0em;
         height: 90%;
@@ -92,7 +92,7 @@
     box-shadow: none;
   }
 
-  @media (max-width: 300px) {
+  @media (max-width: 370px) {
     grid-template-columns: 1fr;
   }
 }
