--- a/src/styles/_wordpress_overrides.scss
+++ b/src/styles/_wordpress_overrides.scss
@@ -5,6 +5,10 @@
 */
 $card_height: 100vh;
 
+header#main-header {
+  display: none;
+}
+
 h1.entry-title.main_title {
   display: none;
 }
@@ -35,9 +39,9 @@ body div#calculator {
   font-size: 20px;
   font-family: 'Source Sans Pro', 'Helvetica', sans-serif;
 
-  div#results.ccl_card > div div {
-    padding: 0 3.67037% !important;
-  }
+  // div#results.ccl_card > div div {
+  //   padding: 0 3.67037% !important;
+  // }
   div#results.ccl_card > div {
     div.impact_panel {
       padding: 40px 0px 0px 0px !important;
